@@ -1,13 +1,12 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-#' Lookup the string values used to represent different distributions
-#'
-#' @return Character vector corresponding to supported distributions
+### Lookup the string values used to represent different distributions
 get_distribution_names <- function() {
     .Call(`_binsegRcpp_get_distribution_names`)
 }
 
+### Low-level interface to binary segmentation algorithm.
 binseg_interface <- function(data_vec, weight_vec, kmax, distribution_str, is_validation_vec, position_vec) {
     .Call(`_binsegRcpp_binseg_interface`, data_vec, weight_vec, kmax, distribution_str, is_validation_vec, position_vec)
 }
